--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -101,6 +101,12 @@ body {
 
 .nav-current {
     color: red;
+    font-size: 150%;
+    line-height: 100%;
+    font-weight: 700;
+    text-align: center;
+    /* top right bottom left */
+    padding: 9px 5px 9px 5px;
     font-weight: 700;
 }
 
